Partial_14Dec2021/force-app/main/default/objects/Claim_Line_Item__c/fields/QR_Code_Reference_Number__c.field-meta.xml
<CustomField>
    <fullName>QR_Code_Reference_Number__c</fullName>
    <label>QR Code Reference Number</label>
    <length>255</length>
    <type>Text</type>
    <unique>true</unique>
</CustomField>